generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Mei {
  id_mei                  Int                    @id @default(autoincrement())
  cnpj_mei                String                 @unique @db.VarChar(18)
  data_abertura           DateTime               @db.Date
  uf_mei                  String                 @db.Char(2)
  razao_social            String                 @db.VarChar(255)
  nome_fantasia           String                 @db.VarChar(255)
  municipio_mei           String                 @db.VarChar(255)
  cnae_principal          Json
  cnae_secundario         Json?
  natureza_juridica       String                 @db.VarChar(255)
  possui_filial           Boolean
  qtd_funcionario         Int
  paga_acima_piso         Boolean
  participa_outra_empresa Boolean
  faturamento_12m         Decimal                @db.Decimal(8, 2)
  compras_12m             Decimal                @db.Decimal(8, 2)
  exporta_acima_limite    Boolean
  importacao_direta       Boolean
  CalculoRegime           CalculoRegime?
  diagnostico             Diagnostico?
  documentosMeis          DocumentosMei?
  JornadaChecklist        JornadaChecklistItem[]
  JornadaSteps            JornadaStepProgress[]
  usuarios                Usuario?

  @@map("Mei")
}

model Diagnostico {
  id_mei            Int      @id
  resultado_diag    String
  atualizado_em     DateTime @default(now()) @updatedAt
  motivos_resultado Json
  mei               Mei      @relation(fields: [id_mei], references: [id_mei])

  @@map("Diagnostico")
}

model Cnae {
  cnae                String   @db.Char(9)
  ocupacao_cnae       String
  descricao_subclasse String
  iss_cnae            String   @db.Char(1)
  icms_cnae           String   @db.Char(1)
  id_cnae             Int      @id @default(autoincrement())
  lucrop_aliq_csll    Decimal? @db.Decimal(5, 2)
  lucrop_aliq_irpj    Decimal? @db.Decimal(5, 2)
  setor_cnae          String?  @db.VarChar(30)
  simples_anexo       String?  @db.VarChar(40)
  simples_fatorr      String?  @db.Char(1)

  @@index([cnae], map: "cnae_cnae_index")
  @@index([cnae, ocupacao_cnae], map: "cnae_cnae_ocupacao_cnae_index")
  @@index([cnae, descricao_subclasse], map: "cnae_cnae_descricao_subclasse_index")
  @@map("Cnae")
}

model CalculoRegime {
  id_mei                    Int      @id
  receitas_financeiras      Decimal? @default(0.00) @db.Decimal(12, 2)
  receitas_nao_operacionais Decimal? @default(0.00) @db.Decimal(12, 2)
  despesas_financeiras      Decimal? @default(0.00) @db.Decimal(12, 2)
  tributos_simples          Decimal  @db.Decimal(12, 2)
  tributos_lucrop           Decimal  @db.Decimal(12, 2)
  atualizado_em             DateTime @db.Timestamp(0)
  aliq_efetiva_lucrop       Decimal  @db.Decimal(5, 4)
  aliq_efetiva_simples      Decimal  @db.Decimal(5, 4)
  lucro_liq_lucrop          Decimal  @db.Decimal(12, 2)
  lucro_liq_simples         Decimal  @db.Decimal(12, 2)
  recomendacao              String   @db.Char(2)
  Mei                       Mei      @relation(fields: [id_mei], references: [id_mei])
}

model JornadaStepProgress {
  id         Int      @id @default(autoincrement())
  id_mei     Int
  step       String
  started    Boolean  @default(false)
  completed  Boolean  @default(false)
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
  mei        Mei      @relation(fields: [id_mei], references: [id_mei])

  @@unique([id_mei, step])
  @@map("JornadaStepProgress")
}

model JornadaChecklistItem {
  id         Int      @id @default(autoincrement())
  id_mei     Int
  step       String
  item_id    String
  is_checked Boolean  @default(false)
  created_at DateTime @default(now())
  updated_at DateTime @updatedAt
  mei        Mei      @relation(fields: [id_mei], references: [id_mei])

  @@unique([id_mei, step, item_id])
  @@map("JornadaChecklistItem")
}

model Usuario {
  id_user             Int           @id @default(autoincrement())
  id_mei              Int?          @unique
  nome_user           String
  email_user          String        @unique
  cnpj_user           String        @unique @db.VarChar(18)
  senha_user          String
  celular_user        String        @unique @db.VarChar(14)
  created_at          DateTime      @default(now())
  updated_at          DateTime      @updatedAt
  refresh_token       String?
  reset_token         String?
  reset_token_expires DateTime?
  messages            ChatMessage[]
  mei                 Mei?          @relation(fields: [id_mei], references: [id_mei])

  @@map("Usuario")
}

model DocumentosMei {
  id_mei                                Int      @id
  possui_rg                             Boolean  @default(false)
  possui_cpf                            Boolean  @default(false)
  possui_comprovante_residencia         Boolean  @default(false)
  possui_cartao_cnpj                    Boolean  @default(false)
  formulario_capa_marrom                Boolean  @default(false)
  requerimento_desenquadramento         Boolean  @default(false)
  comprovante_pagamento_dare            Boolean  @default(false)
  contrato_social                       Boolean  @default(false)
  possui_ccmei                          Boolean  @default(false)
  possui_cadesp                         Boolean  @default(false)
  comprovante_situacao_simples_nacional Boolean  @default(false)
  criado_em                             DateTime @default(now())
  atualizado_em                         DateTime @updatedAt
  comunicacao_desenquadramento_simei    Boolean  @default(false)
  Mei                                   Mei      @relation(fields: [id_mei], references: [id_mei])
}

model ChatMessage {
  id         Int      @id @default(autoincrement())
  user_id    Int
  role       String
  content    String
  created_at DateTime @default(now())
  user       Usuario  @relation(fields: [user_id], references: [id_user])

  @@index([user_id])
}
